test/error/modify_const_variable.c
int main(void) {
    const int i = 1;

    i = 2; //error
}
